fix token feature to show all tokens, add next season's token, remove token feature on mobile sizes

--- a/src/styles/modules/_token-feature.scss
+++ b/src/styles/modules/_token-feature.scss
@@ -5,6 +5,10 @@
     border-radius: 20px;
     margin-bottom: 3rem;
 
+    @media screen and (max-width: 820px){
+        display: none;
+    }
+
     .slide{
         .carousel-inner{
             .carousel-item{
